# weather-cli-rust

./: .env  Cargo.toml  LICENSE  README.md
src/: main.rs
