[package]
name = "Weather-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
